# bmw-idrive-touch-esp32-s3

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  code.txt  file_content.py  idf_component.yml  partitions_ota.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3-devkitc-1  tusb_config.h
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: BMW_iDrive_CAN_Protocol_Research.md  ESP32_Performance_Optimization.md
include/: ble_hid.h  ble_hid_dev.h  idrive.h  key_assignments.h  settings.h  tusb_config.h  usb_hid_device.h  usb_hid_handler.h  variables.h
include/can/: can_bus.h  can_task.h
include/config/: config.h
include/hid/: hid_keycodes.h  usb_hid_device.h
include/idrive/: controller_protocol.h  idrive_controller.h  zbe4_protocol.h  zbe4_rev03_protocol.h
include/input/: button_handler.h  input_handler.h  joystick_handler.h  rotary_handler.h  touchpad_handler.h
include/ota/: ota_config.h  ota_manager.h  ota_trigger.h  web_server.h  wifi_ap.h
include/utils/: utils.h
src/: CMakeLists.txt  ble_hid.cpp  ble_hid_dev.cpp  idf_component.yml  idrive.cpp  main.cpp  usb_hid_device.c  usb_hid_handler.cpp  variables.cpp
src/can/: can_bus.cpp  can_task.cpp
src/hid/: usb_hid_device.cpp
src/idrive/: idrive_controller.cpp  zbe4_protocol.cpp  zbe4_rev03_protocol.cpp
src/input/: button_handler.cpp  joystick_handler.cpp  rotary_handler.cpp  touchpad_handler.cpp
src/ota/: ota_manager.cpp  ota_trigger.cpp  web_server.cpp  wifi_ap.cpp
src/utils/: utils.cpp
